<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntentsPlaygroundActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:text="@string/explict_intent"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button2"
                android:layout_width="250dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:onClick="OpenMainActivity"
                android:text="@string/open_main_activity"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:text="@string/implict_intent"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Data"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/data">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="380dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_horizontal"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/intentTypeRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/OpenWebpageRadioBut"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text="@string/open_webpage"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/DialButtonRadioBut"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text="@string/dial_number"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/ShareTextRadioBut"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text="@string/share_text"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="110dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:onClick="SendImplictIntent"
                        android:text="@string/g0"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/divider2"
                        android:layout_width="match_parent"
                        android:layout_height="8dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:paddingStart="20dp"
                        android:paddingTop="20dp"
                        android:paddingEnd="20dp"
                        android:text="@string/sending_receving_data"
                        android:textColor="@color/black"
                        android:textSize="36sp"
                        android:textStyle="bold" />
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/InitialCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/initial_count"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:inputType="number"
                            android:maxLength="5"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:padding="20dp" />

                        <Button
                            android:id="@+id/button5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="SendData"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:text="@string/send" />

                        <TextView
                            android:id="@+id/result"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/final_result_after_send_back_is"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </com.google.android.material.textfield.TextInputLayout>

                </RadioGroup>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>