<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="167dp"
        android:text="@string/my_counter"
        android:textColor="#0C0C0C"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/qty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24" />

    <Button
        android:id="@+id/Inqbtn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="543dp"
        android:text="@string/Ingbtn"
        android:onClick="Inqty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/deqbtn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="543dp"
        android:onClick="deqty"
        android:text="@string/degbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/qty"
        android:layout_width="18dp"
        android:layout_height="31dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="20dp"
        android:text="@string/_0"
        android:textColor="#0B0B0B"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/Inqbtn"
        app:layout_constraintStart_toEndOf="@+id/deqbtn"
        app:layout_constraintEnd_toStartOf="@+id/Inqbtn"
        app:layout_constraintTop_toTopOf="@+id/Inqbtn" />

</androidx.constraintlayout.widget.ConstraintLayout>